--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,8 @@ repositories {
 }
 
 dependencies {
-    implementation 'com.github.KaptainWutax:SeedUtils:d552df76aac9f4451c22b21d7fb86f1abbb6e7eb'
-    implementation 'com.github.KaptainWutax:BiomeUtils:7f3e6c60fb5951412d80d18ef85dd5ebf261b0cb'
+    implementation 'com.github.KaptainWutax:SeedUtils:aeb99b881ac2f91ac208e10a7f967d91a079bcc8'
+    implementation ('com.github.KaptainWutax:BiomeUtils:7f3e6c60fb5951412d80d18ef85dd5ebf261b0cb') {
+        transitive = false
+    }
 }
