--- a/build.gradle
+++ b/build.gradle
@@ -13,8 +13,11 @@ repositories {
 }
 
 dependencies {
-    implementation 'com.github.KaptainWutax:SeedUtils:853d28286ff78b2f907fd81ecad70eadd6ea3a9a'
+    implementation 'com.github.KaptainWutax:SeedUtils:412a39abfff6b43c8a6d53402f8cf553078493a6'
     implementation ('com.github.KaptainWutax:BiomeUtils:046ca7ca45a1b891f570f36e53b7e7ab06805a17') {
+        transitive = false
+    }
+    implementation ('com.github.mjtb49:ChunkRandomReversal:e66e286f4bcc5f652ba53f61482fc7dca8ef7d49') {
         transitive = false
     }
 }
