--- a/build.gradle
+++ b/build.gradle
@@ -11,8 +11,7 @@ repositories {
 }
 
 dependencies {
-    implementation('com.github.KaptainWutax:MathUtils:-SNAPSHOT') {transitive = false}
-    implementation('com.github.KaptainWutax:SeedUtils:-SNAPSHOT') {transitive = false}
-    implementation('com.github.KaptainWutax:BiomeUtils:-SNAPSHOT') {transitive = false}
-    implementation('com.github.mjtb49:ChunkRandomReversal:-SNAPSHOT') {transitive = false}
+    implementation('com.github.KaptainWutax:MathUtils:6c2d50eacad0241ff76119e6e703b70bac4b4bce') {transitive = false}
+    implementation('com.github.KaptainWutax:SeedUtils:0de70bc772fef95d8acfa6991e7278ee53a8b46c') {transitive = false}
+    implementation('com.github.KaptainWutax:BiomeUtils:a3c332cc1bd7a1d7ea245d35c393a17c77eab175') {transitive = false}
 }
