--- a/build.gradle
+++ b/build.gradle
@@ -16,9 +16,12 @@ repositories {
 
 dependencies {
     implementation('com.github.KaptainWutax:MathUtils:5531c4a87b0f1bb85d1dab2bdd18ce375400626a') {transitive = false}
-    implementation('com.github.hube12:SeedUtils:b14febeeceda70df394dc2dc123aab1c4eb7fb3e') {transitive = false}
-    implementation('com.github.KaptainWutax:BiomeUtils:4f2981d8f1f17cfecc25552e0d6e3d6438f31dee') {transitive = false}
+    implementation('com.github.KaptainWutax:SeedUtils:40b5cc6f369afb0a10dd735f5bc3342fd338c4e3') {transitive = false}
+    implementation('com.github.KaptainWutax:BiomeUtils:0d7d6b986a3fc44ef1b6839eb66433cbf9623525') {transitive = false}
+    implementation('com.github.KaptainWutax:NoiseUtils:5919e438dc1cda50bf8e2ba0a99b4618349ac085') {transitive = false}
+    implementation('com.github.KaptainWutax:TerrainUtils:dd3721da6ebb93be6fb0a54a1f44fcb0aa868e5d') {transitive = false}
 
+    testImplementation('com.github.KaptainWutax:ChunkRandomReversal:8174cd55b8ee492b54fbc860fbafc83726bac846') {transitive = false}
     testImplementation('org.junit.jupiter:junit-jupiter-api:5.4.2')
     testRuntime('org.junit.jupiter:junit-jupiter-engine:5.4.2')
 }
