--- a/build.gradle
+++ b/build.gradle
@@ -24,7 +24,7 @@ dependencies {
     implementation('com.github.KaptainWutax:BiomeUtils:f27f6e029b85c8a32371ae62292c6ac7fb121674') {transitive = false}
     implementation('com.github.KaptainWutax:TerrainUtils:5b477c80a266b1fb2241f11a56538fb33b04a478') {transitive = false}
 
-    testImplementation('com.github.hube12:ChunkRandomReversal:76bc51ef8b05a6366b8080ed8d071ba5d3ba5e82') {transitive = false}
+    testImplementation('com.github.KaptainWutax:ChunkRandomReversal:6b76fb5cf2cd438de56e6a46cea2a83985831834') {transitive = false}
     testImplementation('org.junit.jupiter:junit-jupiter-api:5.4.2')
     testRuntime('org.junit.jupiter:junit-jupiter-engine:5.4.2')
 }
