--- a/build.gradle
+++ b/build.gradle
@@ -24,8 +24,12 @@ dependencies {
     implementation('com.github.KaptainWutax:TerrainUtils:dbba2ba61a2c8920b48b1fb9a32fa8e9fe353d61') {transitive = false}
 
     testImplementation('com.github.KaptainWutax:ChunkRandomReversal:6b76fb5cf2cd438de56e6a46cea2a83985831834') {transitive = false}
-    testImplementation('org.junit.jupiter:junit-jupiter-api:5.4.2')
-    testRuntime('org.junit.jupiter:junit-jupiter-engine:5.4.2')
+    testImplementation('org.junit.jupiter:junit-jupiter-api:5.7.1')
+    testImplementation('org.junit.jupiter:junit-jupiter-params:5.7.1')
+    testImplementation('org.junit-pioneer:junit-pioneer:1.3.8')
+
+    testRuntimeOnly('org.junit.jupiter:junit-jupiter-engine:5.7.1')
+    testRuntimeOnly('org.junit.platform:junit-platform-console:1.7.1')
 }
 
 compileJava {
