add utility for structure

--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,9 @@ compileJava {
     options.compilerArgs << "-Xlint:unchecked" << "-Xlint:deprecation"
 }
 
+compileTestJava {
+    options.compilerArgs << "-Xlint:unchecked" << "-Xlint:deprecation"
+}
 
 test {
     useJUnitPlatform {
